--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "client": "npm run watch --prefix client",
+    "dev": "concurrently \"npm run watch\" \"npm run client\""
   },
   "keywords": [
     "poker",
@@ -20,6 +22,7 @@
     "pg": "^8.3.3"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
 }
