--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": " cd client && react-scripts build",
+    "install": "cd client && npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "cra-build-watch"
