--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon server.js",
     "client": "npm run watch --prefix client",
-    "dev": "concurrently \"npm run watch\" \"npm run client\""
+    "dev": "concurrently \"npm run watch\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm i --production && npm run build"
   },
   "keywords": [
     "poker",
