--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
