--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   },
   "engines": {
