--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "author": "Jeff King",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.3.3",
-    "dotenv": "^8.2.0"
+    "pg": "^8.3.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
