--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "nodemon server.js",
     "client": "npm run watch --prefix client",
     "dev": "concurrently \"npm run watch\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm i && npm run build"
+    "heroku-postbuild": "cd client && npm i && npm run build",
+    "start-local": "node -r dotenv/config server.js"
   },
   "keywords": [
     "poker",
@@ -19,12 +20,12 @@
   "author": "Jeff King",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.3.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   },
   "engines": {
