--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+ENVIRONMENT=
 PG_USER=
 PG_HOST=
 PG_DATABASE=
@@ -5,4 +6,5 @@ PG_PASSWORD=
 PG_PORT=
 API_KEY=
 API_URL=
-isJeffAngy=true
+CLIENT_URL=
+CLIENT_START=
