--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Jeff King",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.3.3"
