--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "mdbreact": "^4.27.0",
     "morgan": "^1.10.0",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "react-window": "^1.8.5"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
